# pathology-saas

./: AGENTS.md  README.md  render.yaml
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b7274f2c8b4_add_slides_table.py  69b150cbb182_cascade_report_slide_deletes.py  78f36e07fabc_add_slide_shares_table.py  7fc858f5fa07_make_owner_ids_nullable_on_user_delete.py  88e7d30df289_add_reports_table.py  a3ce8f557b8e_create_slides_storage_bucket.py  b743525a5210_create_organizations_and_users_tables.py  bc682429e806_add_user_permissions_table.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  permissions.py  storage.py
backend/app/auth/: deps.py  google.py  jwt.py  router.py  schemas.py  service.py
backend/app/reports/: router.py  schemas.py  service.py
backend/app/shares/: router.py  schemas.py  service.py
backend/app/slides/: router.py  schemas.py  service.py  viewer.py
backend/app/users/: deps.py  router.py  schemas.py  service.py
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx
client/src/auth/: LoginPage.tsx  OnboardPage.tsx  api.ts  hooks.ts  types.ts
client/src/components/: AppShell.tsx
client/src/lib/: api.ts
client/src/pages/: DashboardPage.tsx
client/src/reports/: api.ts  hooks.ts  types.ts
client/src/reports/components/: ReportForm.tsx  ReportsTable.tsx
client/src/shares/: api.ts  hooks.ts  types.ts
client/src/slides/: api.ts  hooks.ts  types.ts
client/src/users/: api.ts  hooks.ts  types.ts
(+10 files in other folders)
